--- a/index.html
+++ b/index.html
@@ -31,10 +31,17 @@
         <div class="nav-left-text">This interior</div>
       </div>
       <div class="nav-right">
-        <div class="nav-right-block"><a class="nav-right-a">Home</a></div>
-        <div class="nav-right-block"><a class="nav-right-a">Collection</a></div>
-        <div class="nav-right-block"><a class="nav-right-a">About</a></div>
-        <div class="nav-right-block"><a class="nav-right-a">Contact</a></div>
+        <div class="nav-menu">
+          <div class="nav-right-block"><a class="nav-right-a">Home</a></div>
+          <div class="nav-right-block"><a class="nav-right-a">Collection</a></div>
+          <div class="nav-right-block"><a class="nav-right-a">About</a></div>
+          <div class="nav-right-block"><a class="nav-right-a">Contact</a></div>
+        </div>
+        <div class="hamburger">
+          <span class="hamburger-bar-1"></span>
+          <span class="hamburger-bar-2"></span>
+          <span class="hamburger-bar-3"></span>
+        </div>
       </div>
     </header>  
     <main>
