--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
       </div>
       <div class="nav-right">
         <div class="nav-menu">
-          <div class="nav-right-block"><a class="nav-right-a">Home</a></div>
-          <div class="nav-right-block"><a class="nav-right-a">Collection</a></div>
-          <div class="nav-right-block"><a class="nav-right-a">About</a></div>
-          <div class="nav-right-block"><a class="nav-right-a">Contact</a></div>
+          <li class="nav-right-block"><a class="nav-right-a">Home</a></>
+          <li class="nav-right-block"><a class="nav-right-a">Collection</a></li>
+          <li class="nav-right-block"><a class="nav-right-a">About</a></li>
+          <li class="nav-right-block"><a class="nav-right-a">Contact</a></li>
+          <!-- <div class="blank"></div> -->
         </div>
         <div class="hamburger">
           <span class="hamburger-bar-1"></span>
