Fixed error with listing

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
       </div>
       <div class="nav-right">
         <div class="nav-menu">
-          <li class="nav-right-block"><a class="nav-right-a">Home</a></>
-          <li class="nav-right-block"><a class="nav-right-a">Collection</a></li>
-          <li class="nav-right-block"><a class="nav-right-a">About</a></li>
-          <li class="nav-right-block"><a class="nav-right-a">Contact</a></li>
+          <div class="nav-right-block"><a class="nav-right-a">Home</a></div>
+          <div class="nav-right-block"><a class="nav-right-a">Collection</a></div>
+          <div class="nav-right-block"><a class="nav-right-a">About</a></div>
+          <div class="nav-right-block"><a class="nav-right-a">Contact</a></div>
           <!-- <div class="blank"></div> -->
         </div>
         <div class="hamburger">
